--- a/configs/KiDS_mags.yaml
+++ b/configs/KiDS_mags.yaml
@@ -2,10 +2,12 @@ data_name: KiDS.DR3.x.SDSS.DR14
 
 catalog_name: KiDS.DR3.merged
 
+subset:
+
+clean_sdss: True
+
 model: rf
 
 features: all
 
 cut: r
-
-clean_sdss: True
