Last Astronet tests

--- a/configs/dr4_exp.yaml
+++ b/configs/dr4_exp.yaml
@@ -6,11 +6,11 @@ cut:
 
 model: ann
 
-pred_class: False
+pred_class: True
 
-pred_z: True
+pred_z: False
 
-specialization: GALAXY
+specialization:
 
 bands: [u, g, r, i, Z, Y, J, H, Ks]
 
