--- a/configs/dr4_exp.yaml
+++ b/configs/dr4_exp.yaml
@@ -1,10 +1,8 @@
 train_data: KiDS.DR4.x.SDSS.DR14
 
-inference_data: KiDS.DR4.merged
+inference_data: KiDS.DR4.merged.cols
 
-cut:
-
-model: ann
+model: xgb
 
 pred_class: True
 
@@ -12,8 +10,10 @@ pred_z: False
 
 specialization:
 
+cut:
+
 bands: [u, g, r, i, Z, Y, J, H, Ks]
 
 features_key: all
 
-test: magnitude
+test_method: magnitude
