--- a/configs/dr4_exp.yaml
+++ b/configs/dr4_exp.yaml
@@ -2,13 +2,13 @@ train_data: KiDS.DR4.x.SDSS.DR14
 
 inference_data: KiDS.DR4.cols
 
-model: rf
+model: ann
 
 pred_class: True
 
 pred_z: False
 
-specialization: GALAXY
+specialization:
 
 cut:
 
