--- a/configs/dr4_exp.yaml
+++ b/configs/dr4_exp.yaml
@@ -4,9 +4,9 @@ inference_data: KiDS.DR4.cols
 
 model: xgb
 
-pred_class: True
+pred_class: False
 
-pred_z: False
+pred_z: True
 
 specialization:
 
