--- a/configs/dr4_exp.yaml
+++ b/configs/dr4_exp.yaml
@@ -2,17 +2,17 @@ train_data: KiDS.DR4.x.SDSS.DR14
 
 inference_data: KiDS.DR4.cols
 
-model: xgb
+model: ann
 
-pred_class: False
+pred_class: True
 
-pred_z: True
+pred_z: False
 
-specialization: GALAXY
+specialization:
 
 cut:
 
-bands: [u, g, r, i, Z, Y, J, H, Ks]
+bands: [u, g, r, i]  # , Z, Y, J, H, Ks
 
 features_key: all
 
